$Id$

2011-07-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Updated to latest version from arp-scan source tree.
	  This includes the GCC_WEXTRA macro and removes the dependence on the
	  <features.h> header.

	* configure.ac: Removed version number from AM_INIT_AUTOMAKE macro,
	  as this usage is obsolete now. Added -Wshadow warning switch and
	  Added GCC_WEXTRA macro to determine if the C compiler supports the
	  -Wextra switch to enable extra warnings. Define ATTRIBUTE_UNUSED
	  macro to enable portable use of attribute unused to mark possibly
	  unused function arguments.

	* tcp-scan.c, tcp-scan.h, utils.c: Remove unused variables, address
	  signed/unsigned comparisons highlighted by -Wextra and address
	  address shadowed variable warnings.

2009-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c, utils.c: Improve handling of --bandwidth and
	  --interval options: Allow either upper or lowercase
	  multiplier letters and give an error if an unknown multiplier
	  character is used.  Previously an unknown multiplier character
	  or one with the wrong case was silently ignored and treated as
	  no multiplier at all.

	* wrappers.c: Change Strtoul so it gives an error if the
	  underlying strtoul function finishes at an unconvertable
	  character other than NULL or whitespace.

	* configure.ac: Added extra warning "-Wwrite-strings" for gcc.

2009-05-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: upgraded for autoconf 2.61

2009-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Added macros to detect compiler support for
	  -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security.

	* configure.ac: Conditionally enable compiler flags for
	  -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security using
	  the new acinclude.m4 autoconf macros.

	* configure.ac: Incremented version to 1.18

2008-10-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-sizes.c: New program to check the sizes of key types and
	  structures.
